<resources>
    <string name="app_name">CustoViagem</string>
    <string name="distance">Distancia</string>
    <string name="total_of_quilometer">Total de quilometros</string>
    <string name="price">Preço</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="kms_per_liter">KMs por litro</string>
    <string name="total_spend">Seu gasto total será de:</string>
    <string name="calculate">Calcular</string>
    <string name="incorect_values">Valores incorretos!</string>
    <string name="money_value">R$ 0</string>
</resources>